some minor updates to lecture 1.1

--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -28,7 +28,7 @@ format:
 <hr>
 
 ::: {.center-text}
-This course will focus on the basic principles for effective communication through data visualization and using technical tools and workflows for creating and sharing data visualizations with diverse audiences.
+This course will focus on the basic principles for effective communication through data visualization and using programmatic tools and workflows for creating and sharing data visualizations with diverse audiences.
 :::
 
 ```{r}
@@ -125,7 +125,7 @@ knitr::include_graphics("images/week1/annie.png")
 [**Annie Adams**]{.teal-text}  
 [**Email:** [aradams@ucsb.edu](mailto::aradams@ucsb.edu)]{.body-text-s}   
 [**Learn more:** [annieradams.github.io](https://annieradams.github.io/){target="_blank"}]{.body-text-s}    
-[**Student hours:** TBD]{.body-text-s} 
+<!-- [**Student hours:** TBD]{.body-text-s}  -->
 :::
 
 :::
@@ -154,6 +154,10 @@ knitr::include_graphics("images/week1/sloane.png")
 :::
 
 ::::
+
+::: {.footer}
+Find a [summary of each of our primary responsibilities](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0#heading=h.gs675y5k0m8q){target="_blank"} in the syllabus.
+:::
 
 ---
 
@@ -292,7 +296,7 @@ Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel an
 | 6   | 2/10    | enhancing visualizations (part II)                                   |
 | 7   | 2/17    | [*no class* ]{.teal-text}                                            |
 | 8   | 2/24    | data storytelling, people as data                                    |
-| 9   | 3/03    | OJS with Dr. Allison Horst                                           |
+| 9   | 3/03    | tbd                                                                  |
 | 10  | 3/10    | grab bag & catch up                                                  |
 :::
 
@@ -331,7 +335,11 @@ knitr::include_graphics("images/week1/pre-lecture-prep.png")
 ```
 
 ::: {.center-text}
-***It is highly recommended that you do this well in advance of attending lecture.***
+***It is highly recommended that you do this well in advance<sup>1</sup> of attending lecture.***
+:::
+
+::: {.footer}
+<sup>1</sup>Except downloading `.qmd` templates -- please hold off until each Monday morning, as changes are likely to occur up until just before class {{< fa face-smile title="a smiling face" >}}
 :::
 
 ---
@@ -495,7 +503,7 @@ You *do not* need to provide a reason to request an extension, resubmission, or 
 ::: incremental
 - everyone starts with **0 tokens**
 - earn your **first token** by attending discussion section on Tuesday 1/7
-- earn **3 more tokens** by submitting Self-reflection #1 
+- earn **2 more tokens** by submitting Self-reflection #1 
 - earn **1 token per week** by attending discussion section (*full 50 min*)
 :::
 
@@ -564,7 +572,7 @@ You may use GenAI tools in this class **as long as it aligns with the learning o
 . . . 
 
 ::: {.center-text .body-text-l}
-**Please read the full policy on the [course syllabus](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0){target="_blank"}**
+**Please read the full policy on the [course syllabus](https://docs.google.com/document/d/1ZALT0Ef9GQga5rkBAWJhzQ2npC4l-FkcNV4kMYFud0Q/edit?tab=t.0#heading=h.y681rehhz56a){target="_blank"}**
 :::
 
 ---
@@ -585,7 +593,7 @@ Troubleshooting, deciphering code, and trying (and failing at) new things is a *
 knitr::include_graphics("images/week1/getting-help-steps.png")
 ```
 
-Check out the [getting unstuck](../../getting-unstuck.qmd){target="_blank"} page (under "resources") on the course website for more tips -- particularly a reminder of **how to ask a question.**
+Check out the [getting unstuck](../../getting-unstuck.qmd){target="_blank"} page (under "resources") on the course website for more tips -- especially on **how to ask a question.**
 
 ---
 
@@ -800,7 +808,7 @@ What you create can be used in your [**professional portfolio**]{.teal-text}! Th
 
 . . .
 
-[{{< fa chart-column >}}]{.teal-text} Build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `ggplot2` + ggplot2 extension packages
+[{{< fa chart-column >}}]{.teal-text} Build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 
 <br>
 
