--- a/course-materials/week9.qmd
+++ b/course-materials/week9.qmd
@@ -1,8 +1,10 @@
 ---
-title: "Data visualization in JavaScript, with Dr. Allison Horst"
+title: "TBD"
 subtitle: "Week 9"
 description: "Monday March 3^rd^, 2025"
 ---
+
+<!-- Original title: "Data visualization in JavaScript, with Dr. Allison Horst" -->
 
 ```{r}
 #| eval: true 
@@ -10,7 +12,7 @@ description: "Monday March 3^rd^, 2025"
 #| fig-align: "center"
 #| out-width: "85%" 
 #| fig-alt: "The Observable logo and brand name in black hovers above a series of yellow, red, and blue data points that appear to be timeseries data."
-knitr::include_graphics(here::here("images", "observable.png"))
+#knitr::include_graphics(here::here("images", "observable.png"))
 ```
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
