fixed some broken links

--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -44,7 +44,7 @@ For example, let's say I'm interested in how Lyme disease incidence is changing 
 
 ::: {.callout-tip}
 ## Tip: Remember to check out the Resources page!!
-It lists tons of really wonderful websites, tutorials, and links to the repos / websites of some seriously incredible [data viz creators](../resources.qmd#inspirational-data-visualization-creators){target="_blank"}. This is an excellent place to start when looking for inspiration.
+It lists tons of really wonderful websites, tutorials, and links to the repos / websites of some seriously incredible [data viz creators](../../resources.qmd#inspiration){target="_blank"}. This is an excellent place to start when looking for inspiration.
 :::
 
 - [ ] **5.** Hand-draw your anticipated visualizations, then take a photo of your drawing(s) and embed it in your rendered `.qmd` file -- **note** that these are not *exploratory* visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4. You should have:
