--- a/course-materials/assignments/SR1-precourse.qmd
+++ b/course-materials/assignments/SR1-precourse.qmd
@@ -26,12 +26,12 @@ Because everyone is participating under unique circumstances, I want to learn ab
 - [ ] **9.** Of the courses you’re taking this quarter, which do you expect to be the most challenging? Most demanding?
 - [ ] **10.** What responsibilities do you have outside of school, and how do you want to balance them?
 - [ ] **11.** Which learning goals from the syllabus are you most excited about? 
-- [ ] **12. Most importantly**, how do you plan on accomplishing your learning goals for this course? **Note:** be specific here! Instead of writing, “I will complete homework assignments” or “I will study”,  you can make these more specific strategies: “I will create a schedule to map out assignments“ (elaborate on this), “I will use the homework assignments as opportunities to practice X,” I will communicate with classmates to ask for help after trying X,” “I will participate in online learning communities, such as TidyTuesday...” etc. 
+- [ ] **12. Most importantly**, how do you plan on accomplishing your learning goals for this course? **Note:** be specific here! Instead of writing, “I will complete homework assignments” or “I will study,”  you can make these more specific strategies: “I will create a schedule to map out assignments“ (elaborate on this), “I will use the homework assignments as opportunities to practice X,” I will communicate with classmates to ask for help after trying X,” “I will participate in online learning communities, such as TidyTuesday...” etc. 
 
 [**Some fun questions:**]{.teal-text}
 
 - [ ] **13.** What activity(ies) (outside of school / work) brings you the most joy? How do you plan to incorporate that activity into your schedule this quarter (if at all)? If you are unable to do so, is there something else you can plan to do that will bring you similar joy? 
-- [ ] **14.** What is a piece of media you enjoyed recently? (e.g. music, book, movie, meme) 
+- [ ] **14.** What is a piece of media you enjoyed recently (e.g. music, book, movie, meme)? 
 
 ## Rubric (specifications)
 
