--- a/course-materials/discussion/week5/week5-slides.qmd
+++ b/course-materials/discussion/week5/week5-slides.qmd
@@ -483,7 +483,7 @@ salary_rank_by_year |>
 
 (using the same [TidyTuesday data](https://github.com/rfordatascience/tidytuesday/blob/main/data/2019/2019-03-05/readme.md){target="_blank"} as our dumbbell chart from weeks [4](../../week4.qmd){target="_blank"} & [6](../../week6.qmd){target="_blank"})
 
-Source: [Top eight highest paying occupations in 2016](../../lecture-slides/lecture-10.1-misc-chart-slides.qmd){target="_blank"}, by [Sam Csik](https://samanthacsik.github.io){target="_blank"}
+Source: [Top eight highest paying occupations in 2016](../../lecture-slides/lecture-10.1-misc-charts-slides.qmd){target="_blank"}, by [Sam Csik](https://samanthacsik.github.io){target="_blank"}
 :::
 
 ---
