--- a/course-materials/week6.qmd
+++ b/course-materials/week6.qmd
@@ -54,7 +54,7 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/) icons in our ggp
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week6/` folder.
 
 2. Review setup / wrangling / base plot code and make note of any questions you might have. Due to time constraints, we won't be live-coding our way through all code in class. However, we'll reserve some time to answer any questions before we jump into data viz {{< fa face-smile title="a smiling face" >}}. Specifically:
-    - Template 6.1 begins where we left off in creating our salary plot (in [lecture 4.1](lecture4.1-rankings-slides.qmd){target="_blank"}). Review the code under the `## Setup`, `## Wrangle Data` and `## Recreate original plot` sections to re-familiarize yourself.  
+    - Template 6.1 begins where we left off in creating our salary plot (in [lecture 4.1](lecture-slides/lecture4.1-rankings-slides.qmd){target="_blank"}). Review the code under the `## Setup`, `## Wrangle Data` and `## Recreate original plot` sections to re-familiarize yourself.  
     - Template 6.2 includes setup and base plot code for two different visualizations (one using lobster data, another using Mono Lake data). Review the `### Setup` and `### Create base plot` sections for both these visualizations.
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
