--- a/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
@@ -30,7 +30,7 @@ format:
 >*"...the practice of designing and creating easy-to-communicate and easy-to-understand graphic or visual representations of a large amount of complex quantitative and qualitative data and information with the help of static, dynamic or interactive visual items."*
 
 ::: {.right-align-text .body-text-s}
--from [Wikipedia](https://en.wikipedia.org/wiki/Data_and_information_visualization)
+-from [Wikipedia](https://en.wikipedia.org/wiki/Data_and_information_visualization){target="_blank"}
 :::
 
 <br>
@@ -78,19 +78,19 @@ knitr::include_graphics("images/week1/shiny-example.gif")
 
 ::: {.column width="33%"}
 ::: {.center-text}
-Created using [`{ggplot2}`](https://ggplot2.tidyverse.org/)
+Created using [`{ggplot2}`](https://ggplot2.tidyverse.org/){target="_blank"}
 :::
 :::
 
 ::: {.column width="33%"}
 ::: {.center-text}
-Created using [`{gganimate}`](https://gganimate.com/)
+Created using [`{gganimate}`](https://gganimate.com/){target="_blank"}
 :::
 :::
 
 ::: {.column width="33%"}
 ::: {.center-text}
-Created using [`{shiny}`](https://shiny.posit.co/)
+Created using [`{shiny}`](https://shiny.posit.co/){target="_blank"}
 :::
 :::
 
@@ -112,7 +112,7 @@ Created using [`{shiny}`](https://shiny.posit.co/)
 :::
 
 ::: {.right-align-text}
--[Cédric Scherer](https://www.cedricscherer.com/), [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk)
+-[Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}, [Effective Data Visualization](https://www.youtube.com/watch?v=swzFdMc6WPk){target="_blank"}
 :::
 
 <br>
@@ -124,7 +124,7 @@ Created using [`{shiny}`](https://shiny.posit.co/)
 :::
 
 ::: {.right-align-text}
--[Claus O. Wilke](https://clauswilke.com/), [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/index.html)
+-[Claus O. Wilke](https://clauswilke.com/){target="_blank"}, [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/index.html){target="_blank"}
 :::
 
 ---
@@ -146,7 +146,7 @@ knitr::include_graphics("images/week1/history1.1.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -172,7 +172,7 @@ knitr::include_graphics("images/week1/history1.2.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -198,7 +198,7 @@ knitr::include_graphics("images/week1/history1.3.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ---
@@ -220,7 +220,7 @@ knitr::include_graphics("images/week1/history2.1.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -246,7 +246,7 @@ knitr::include_graphics("images/week1/history2.2.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ---
@@ -268,7 +268,7 @@ knitr::include_graphics("images/week1/history2.3.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -294,7 +294,7 @@ knitr::include_graphics("images/week1/history3.1.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -320,7 +320,7 @@ knitr::include_graphics("images/week1/history3.2.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ---
@@ -342,7 +342,7 @@ knitr::include_graphics("images/week1/history4.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -368,7 +368,7 @@ knitr::include_graphics("images/week1/history5.1.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -394,7 +394,7 @@ knitr::include_graphics("images/week1/history5.2.png")
 ```
 
 ::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm), Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map), [b](https://en.wikipedia.org/wiki/Michael_van_Langren), [c](https://en.wikipedia.org/wiki/William_Playfair), [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard)), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu), [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/), [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/) & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962)
+Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
 
 ::: {.notes}
@@ -450,7 +450,7 @@ knitr::include_graphics("images/week1/ripple-etal-2023-fig1.png")
 
 ::: {.column width="50%"}
 ::: {.center-text .body-text-m}
-[**Ripple et al. 2023**](https://doi.org/10.1093/biosci/biad080)
+[**Ripple et al. 2023**](https://doi.org/10.1093/biosci/biad080){target="_blank"}
 :::
 
 [**Fig Caption:** Unusual climate anomalies in 2023 (the red line, which appears bold in print). Sea ice extent (a, b), temperatures (c–e), and area burned in Canada (f) are presently far outside their historical ranges. These anomalies may be due to both climate change and other factors. Sources and additional details about each variable are provided in supplemental file S1. Each line corresponds to a different year, with darker gray representing later years.]{.body-text-s}
@@ -458,7 +458,7 @@ knitr::include_graphics("images/week1/ripple-etal-2023-fig1.png")
 <br>
 
 ::: {.body-text-s .gray-text .center-text}
-*A nice [Twitter thread](https://twitter.com/DoctorVive/status/1717187963036049669) on key takeaways from the above paper*
+*A nice [Twitter thread](https://twitter.com/DoctorVive/status/1717187963036049669){target="_blank"} on key takeaways from the above paper*
 :::
 
 :::
@@ -476,7 +476,7 @@ knitr::include_graphics("images/week1/ripple-etal-2023-fig1.png")
 >*"**Exploratory data analysis (EDA)** is not a formal process with a strict set of rules. More than anything, EDS is a state of mind...you should feel free to investigate every idea that occurs to you. Some of these ideas will pan out, and some will be dead ends. As your exploration continues, you will hone in on a few particularly productive insights that you'll eventually write-up and communicate to others."*
 
 ::: {.right-align-text .body-text-s} 
--Hadley Wickham, author of [R for Data Science](https://r4ds.hadley.nz/eda)
+-Hadley Wickham, author of [R for Data Science](https://r4ds.hadley.nz/eda){target="_blank"}
 :::
 
 . . .
@@ -585,14 +585,14 @@ knitr::include_graphics("images/week1/datasaurus-dozen.gif")
 ::: {.column width="50%"}
 ::: {.center-text}
 Anscombe's Quartet  
-([Anscombe 1973](https://doi.org/10.2307/2682899))
+([Anscombe 1973](https://doi.org/10.2307/2682899){target="_blank"})
 :::
 :::
 
 ::: {.column width="50%"}
 ::: {.center-text}
 Datasaurus Dozen  
-([Matejka & Fitzmaurice 2017](https://doi.org/10.1145/3025453.3025912), expanding upon Albert Cairo's [Datasaurus](http://www.thefunctionalart.com/2016/08/download-datasaurus-never-trust-summary.html))
+([Matejka & Fitzmaurice 2017](https://doi.org/10.1145/3025453.3025912){target="_blank"}, expanding upon Albert Cairo's [Datasaurus](http://www.thefunctionalart.com/2016/08/download-datasaurus-never-trust-summary.html){target="_blank"})
 :::
 :::
 
@@ -619,7 +619,7 @@ knitr::include_graphics("images/week1/hawkins-warming-stripes.png")
 <br>
 
 ::: {.center-text .gray-text}
-[Warming Strips](https://showyourstripes.info/), by [Ed Hawkins](http://www.met.reading.ac.uk/~ed/home/index.php)
+[Warming Strips](https://showyourstripes.info/){target="_blank"}, by [Ed Hawkins](http://www.met.reading.ac.uk/~ed/home/index.php){target="_blank"}
 :::
 
 ---
@@ -643,7 +643,7 @@ knitr::include_graphics("images/week1/lipponen-anomalies.gif")
 <br>
 
 ::: {.center-text .gray-text}
-gif created from [Antti Lipponen](https://anttilip.net/)'s [Temperature Anomolies](https://www.flickr.com/photos/150411108@N06/35471910724/).
+gif created from [Antti Lipponen](https://anttilip.net/){target="_blank"}'s [Temperature Anomolies](https://www.flickr.com/photos/150411108@N06/35471910724/){target="_blank"}.
 :::
 
 ---
@@ -667,7 +667,7 @@ knitr::include_graphics("images/week1/sabbarao-climate-spiral.gif")
 <br>
 
 ::: {.center-text .gray-text}
-gif created from [Mark SubbaRao](https://www.linkedin.com/in/msubbarao/)'s [Climate Spiral](https://svs.gsfc.nasa.gov/5161). For a similar visualization with accompanying `{ggplot2}` code, see [Nicola Rennie](https://nrennie.rbind.io/)'s [TidyTuesday contribution](https://github.com/nrennie/tidytuesday/tree/main/2023/2023-07-11)!
+gif created from [Mark SubbaRao](https://www.linkedin.com/in/msubbarao/){target="_blank"}'s [Climate Spiral](https://svs.gsfc.nasa.gov/5161){target="_blank"}. For a similar visualization with accompanying `{ggplot2}` code, see [Nicola Rennie](https://nrennie.rbind.io/){target="_blank"}'s [TidyTuesday contribution](https://github.com/nrennie/tidytuesday/tree/main/2023/2023-07-11){target="_blank"}!
 :::
 
 ---
@@ -716,11 +716,11 @@ knitr::include_graphics("images/week1/bremer-patchwork-kingdoms3.png")
 ::::
 
 ::: {.center-text .gray-text}
-[Patchwork Kingdoms](https://www.visualcinnamon.com/art/patchwork-kingdoms/), by [Nadieh Bremer](https://www.visualcinnamon.com/about/) portraying the "digital divide" in schools across the world
+[Patchwork Kingdoms](https://www.visualcinnamon.com/art/patchwork-kingdoms/){target="_blank"}, by [Nadieh Bremer](https://www.visualcinnamon.com/about/){target="_blank"} portraying the "digital divide" in schools across the world
 :::
 
 ::: notes
-- a data & generative art charity collection for the [Giga Connect](https://www.unicefusa.org/stories/giga-initiative-connecting-worlds-schools-internet) project of UNICEF which aims to connect all of the schools in the world to the internet. 
+- a data & generative art charity collection for the [Giga Connect](https://www.unicefusa.org/stories/giga-initiative-connecting-worlds-schools-internet){target="_blank"} project of UNICEF which aims to connect all of the schools in the world to the internet. 
 - a dataset of 1 million schools and for ±280,000 of those they know if those schools are connected to the internet
 - took this data about the schools, split it into 1000 subsets, and turned each school into a tiny square
 - upright kingdoms are schools that are already connected to the internet, while those in the hidden / upside down kingdoms are not. Each of the 1000 pieces is thereby showing the “digital divide” that still exists in our world, and the funds from this sale will help to bring more schools from the hidden to the upright kingdom.
@@ -752,7 +752,7 @@ knitr::include_graphics("images/week1/scherer-space-travel.png")
 ```
 
 ::: {.center-text .gray-text}
-[Traveling to Outer Space](https://github.com/z3tt/TidyTuesday/blob/main/R/2020_29_Astronauts.Rmd), by [Cédric Scherer](https://www.cedricscherer.com/)
+[Traveling to Outer Space](https://github.com/z3tt/TidyTuesday/blob/main/R/2020_29_Astronauts.Rmd){target="_blank"}, by [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"}
 :::
 :::
 
@@ -769,7 +769,7 @@ knitr::include_graphics("images/week1/anyene-astronauts.png")
 ```
 
 ::: {.center-text .gray-text}
-[Galaxy of Astronauts](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/scripts/2020_12_astronaut.Rmd), by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/)
+[Galaxy of Astronauts](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/scripts/2020_12_astronaut.Rmd){target="_blank"}, by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/){target="_blank"}
 :::
 :::
 
@@ -784,7 +784,7 @@ knitr::include_graphics("images/week1/thompson-astronauts.png")
 ```
 
 ::: {.center-text .gray-text}
-[Ages Through Time and Space](https://github.com/cararthompson/tidytuesdays/blob/main/scripts/202007b_astronauts.R), by [Cara Thompson](https://www.cararthompson.com/)
+[Ages Through Time and Space](https://github.com/cararthompson/tidytuesdays/blob/main/scripts/202007b_astronauts.R){target="_blank"}, by [Cara Thompson](https://www.cararthompson.com/){target="_blank"}
 :::
 :::
 
@@ -793,7 +793,7 @@ knitr::include_graphics("images/week1/thompson-astronauts.png")
 <br>
 
 ::: {.footer}
-Find the data on the [TidyTuesday repo](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-07-14/readme.md)
+Find the data on the [TidyTuesday repo](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-07-14/readme.md){target="_blank"}
 :::
 
 ---
@@ -813,7 +813,7 @@ knitr::include_graphics("images/week1/vertices.png")
 ```
 
 ::: footer
-Vertices of Communication by [Albert Cairo](https://www.albertocairo.com/), as presented by [Cédric Scherer](https://www.cedricscherer.com/) during his 2022 [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) workshop ([slides](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/materials/04_data_communication.pdf))
+Vertices of Communication by [Albert Cairo](https://www.albertocairo.com/){target="_blank"}, as presented by [Cédric Scherer](https://www.cedricscherer.com/){target="_blank"} during his 2022 [Graphic Design with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/){target="_blank"} workshop ([slides](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/materials/04_data_communication.pdf){target="_blank"})
 :::
 
 ---
@@ -833,8 +833,7 @@ Vertices of Communication by [Albert Cairo](https://www.albertocairo.com/), as p
 <br>
 <br>
 
-::: incremental 
-- I'm most comfortable in R {{< fa face-smile >}}
+::: {.incremental}
 - great ecosystem of data wrangling & visualization packages (inc. a massive and growing collection of `{ggplot2}` extensions)
 - amazing online learning communities
 - data viz fundamentals apply no matter the language / tool
