updates to lectures 1.1 & 1.2

--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -94,12 +94,12 @@ knitr::include_graphics("images/week1/bren-hall.jpg")
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
-#| out-width: "55%" 
+#| out-width: "65%" 
 knitr::include_graphics("images/week1/sam.png")
 ```
 
 ::: {.center-text}
-[**Sam Csik**]{.teal-text}  
+[**Sam Shanny-Csik**]{.teal-text}  
 [**Email:** [scsik@ucsb.edu](mailto::scsik@ucsb.edu)]{.body-text-s}  
 [**Learn more:** [samanthacsik.github.io](https://samanthacsik.github.io/){target="_blank"} ]{.body-text-s}   
 [**Student hours:** Tue. 12:00 - 1:00pm @ Pine Room (Bren 3526)]{.body-text-s} 
@@ -117,7 +117,7 @@ knitr::include_graphics("images/week1/sam.png")
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
-#| out-width: "55%" 
+#| out-width: "65%" 
 knitr::include_graphics("images/week1/annie.png")
 ```
 
@@ -140,7 +140,7 @@ knitr::include_graphics("images/week1/annie.png")
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
-#| out-width: "55%" 
+#| out-width: "65%" 
 knitr::include_graphics("images/week1/sloane.png")
 ```
 
@@ -808,7 +808,7 @@ What you create can be used in your [**professional portfolio**]{.teal-text}! Th
 
 . . .
 
-[{{< fa chart-column >}}]{.teal-text} Build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
+[{{< fa chart-column >}}]{.teal-text} Build effective, responsible, accessible, and aesthetically-pleasing visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 
 <br>
 
