--- a/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
@@ -127,26 +127,45 @@ Created using [`{shiny}`](https://shiny.posit.co/){target="_blank"}
 -[Claus O. Wilke](https://clauswilke.com/){target="_blank"}, [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/index.html){target="_blank"}
 :::
 
+
 ---
 
-## {#history1 data-menu-title="History 1"}
+## {#lascaux data-menu-title="Lascaux"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**16,500 years ago, Pleistocene**]{.body-text-m}
 
+The Lascaux Cave Paintings are thought to be some of the first charted stars and constellations.
+:::
+
+:::: {.columns}
+::: {.column width="50%"}
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history1.1.png")
+knitr::include_graphics("images/week1/lascaux1.png")
 ```
+:::
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.column width="50%"}
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/week1/lascaux2.png")
+```
+:::
+::::
+
+::: {.footer}
+Sources: [BBC](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"} & [Rock Art Blog](https://rockartblog.blogspot.com/2018/08/are-lascaux-cave-paintings-encoded.html){target="_blank"}
 :::
 
 ::: {.notes}
@@ -155,253 +174,294 @@ Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){tar
 
 ---
 
-## {#history2 data-menu-title="History 2" visibility="uncounted"}
+## {#Amennakhte data-menu-title="Amennakhte"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**~1150 BC**]{.body-text-m}
+
+Oldest known geologic map, the Turin Papyrus Map, depicts a dry riverbed (Wadi Hammamat) and major mining region in Egypt's Eastern Desert. 
+:::
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history1.2.png")
+knitr::include_graphics("images/week1/turin-papyrus.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.footer}
+Source: [Wikipedia](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}
 :::
 
 ::: {.notes}
-- Turin Papyrus Map, generally considered the oldest surviving map of topographical interest in the ancient world; was prepared for Ramses IV's quarrying expedition to the Wadi Hammamat; the expedition purpose was to obtain blocks of stone for building statues of the king
+It was prepared by Amennakhte, Scribe-of-the-Tomb, for Ramses IV's quarrying expedition to the Wadi Hammamat for the purpose of obtaining blocks of stone for building statues of the king.
 :::
 
 ---
 
-## {#history3 data-menu-title="History 3" visibility="uncounted"}
+## {#Inca-empire data-menu-title="Inca-empire"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**1400 - 1532 AD**]{.body-text-m}
+
+Quipus (kee-poos) were recording devices used by the Inca Empire for data collection, census records, calendaring, etc.
+:::
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history1.3.png")
+knitr::include_graphics("images/week1/quipu.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.footer}
+Source: [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}
 :::
 
 ---
 
-## {#history4 data-menu-title="History 4" visibility="uncounted"}
+## {#van-Langren data-menu-title="van Langren"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**1644**]{.body-text-m}
+
+Michael Florent van Langren, Flemish astronomer, created the first (known) statistical graph showing differences in estimates of longitudinal distance between Toledo and Rome.
+:::
+
+<br>
 
 ```{r}
 #| eval: true
 #| echo: false
-#| out-width: "100%"
+#| out-width: "90%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history2.1.png")
+knitr::include_graphics("images/week1/toledo-rome.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.footer}
+Source: [Wikipedia](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}
 :::
 
 ::: {.notes}
-- [van Langren](https://vincentarelbundock.github.io/Rdatasets/doc/HistData/Langren1644.html) was a dutch mathematician / astronomer; served as royal mathematician to King Phillip IV of Spain; worked on one of the most significant problems of his time (accurate determination of longitude between Toledo & Rome, particularly navigation by sea); graph shows all available estimates in distance (inaccuracies resulted in many shipwrecks)
+- van Langren was a dutch mathematician / astronomer
+- served as royal mathematician to King Phillip IV of Spain
+- worked on one of the most significant problems of his time (accurate determination of longitude between Toledo & Rome, particularly navigation by sea)
+- graph shows all available estimates in distance (inaccuracies resulted in many shipwrecks)
 :::
 
 ---
 
-## {#history5 data-menu-title="History 5" visibility="uncounted"}
+## {#playfair data-menu-title="Playfair"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**1786**]{.body-text-m}
+
+William Playfair, Scottish engineer and political economist, is credited as the creator of the first bar chart (featuring Scottish trade data, 1780 - 1781), as well as line and pie charts.
+:::
+
+<br>
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "90%"
+#| fig-align: "center"
+knitr::include_graphics("images/week1/playfair-bar.png")
+```
+
+::: {.footer}
+Source: [Wikipedia](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}
+:::
+
+---
+
+## {#willard data-menu-title="Willard"}
+
+[(A little bit of the) History of data visualization]{.slide-title2}
+
+<hr>
+
+::: {.center-text}
+[**1846**]{.body-text-m}
+
+Emma Hart Willard, America's first professional female cartographer, created the *Temple of Time*, which depicts the fall and rise of empires throughout history. It won a medal at the 1851 World's Fair in London.
+:::
+
+<br>
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history2.2.png")
+knitr::include_graphics("images/week1/temple-of-time.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
-:::
-
----
-
-## {#history6 data-menu-title="History 6" visibility="uncounted"}
-
-[History of data visualization]{.slide-title}
-
-<hr>
-
-*Note: this is by no means a comprehensive history of the visual representation of information!*
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "100%"
-#| fig-align: "center"
-knitr::include_graphics("images/week1/history2.3.png")
-```
-
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.footer}
+Source: [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}
 :::
 
 ::: {.notes}
-Willard map maker & founder of first school for women's higher education in the US; Temple of Time uses the architecture as a metaphor for history; foreground = present; columns represent centuries;  she believed that facts must be connected to one another to be meaningful and that they will they be most easily retained if presented visually
+- Willard map maker & founder of first school for women’s higher education in the US
+- Temple of Time uses the architecture as a metaphor for history; foreground = present; columns represent centuries 
+- she believed that facts must be connected to one another to be meaningful and that they will they be most easily retained if presented visually
+- [World’s Fair in London](https://www.londonmuseum.org.uk/collections/london-stories/what-was-great-exhibition-1851/#:~:text=The%20creation%20of%20Queen%20Victoria's,in%20a%20giant%20glass%20building.) = one of the most popular public attractions in 19th-century London, aimed to celebrate modern design and promote Britain as an industrial and imperial power
 :::
 
 ---
 
-## {#history7 data-menu-title="History 7" visibility="uncounted"}
+## {#nightingale data-menu-title="Nightingale"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**1856**]{.body-text-m}
+
+Florence Nightingale was an English wartime nurse who campaigned to improve sanitary conditions of military hospitals. The  *Diagram of the Causes of Mortality in the Army of the East* shows that deaths from preventable diseases (blue) outnumbered combat fatalities (red) in military hospitals in 1854 & early 1855.
+:::
+
+<br>
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history3.1.png")
+knitr::include_graphics("images/week1/nightingale.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.footer}
+Source: [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"}
 :::
 
 ::: {.notes}
-- Nightingale was an English wartime nurse; campaigned to improve sanitary conditions of military hospitals; collected data and created data viz; used color to emphasize particular aspects; famous "polar-area" viz shows the causes of mortality in the military hospital > deaths from preventable diseases (blue) outnumbered combat fatalities (red) in 1854 & early 1855; the changes she put in place greatly reduced those deaths by April 1855 (see [here](https://daily.jstor.org/florence-nightingale-data-visualization-visionary/))
+- Nightingale dedicated much of her life to conveying public health statistics in exciting & easy-to-understand ways.
+- The changes she put in place greatly [reduced those deaths](https://daily.jstor.org/florence-nightingale-data-visualization-visionary/){target="_blank"} by April 1855.
 :::
 
 ---
 
-## {#history8 data-menu-title="History 8" visibility="uncounted"}
+## {#minard data-menu-title="Minard"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**1869**]{.body-text-m}
+
+Charles Minard, a French civil engineer, produced what is referred to as, "the greatest visualization created." *Napoleon's Russian Campaign* displays 6 types of data in 2D (# troops, distance traveled, temperature, lat / lon, direction of travel, location relative to specific dates).
+:::
+
+<br>
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history3.2.png")
+knitr::include_graphics("images/week1/minard.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.footer}
+Source: [Wikipedia](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}
 :::
 
 ---
 
-## {#history9 data-menu-title="History 9" visibility="uncounted"}
+## {#DuBois data-menu-title="DuBois"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+[**1900**]{.body-text-m}
 
+W.E.B. DuBois, was an African American writer, scholar and activist. He used photographs and data visualizations to commemorate the lives of African Americans at the turn of the century and challenge the racist caricatures and stereotypes of the day.
+:::
+
+:::: {.columns}
+::: {.column width="50%"}
 ```{r}
 #| eval: true
 #| echo: false
-#| out-width: "100%"
+#| out-width: "50%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history4.png")
+knitr::include_graphics("images/week1/DuBois-anyene.png")
 ```
 
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+::: {.center-text .body-text-s .gray-text}
+*Assessed value of household and kitchen furnitures owned by Georgia Negroes* [Recreation](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/outputs/2021_06_webdubois.png){target="_blank"} by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/){target="_blank"} for the 2021 [#DuBoisChallenge](https://nightingaledvs.com/the-dubois-challenge/){target="_blank"}
 :::
+:::
+
+::: {.column width="50%"}
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "50%"
+#| fig-align: "center"
+knitr::include_graphics("images/week1/DuBois-freites.png")
+```
+
+::: {.center-text .body-text-s .gray-text}
+*Proportion of Freemen and Slaves Among American Negroes.* [Recreation](https://github.com/luisfrein/R_Tidytuesday/tree/master/2021/W08_Dubois_Challenge){target="_blank"} by [Luis Freites](https://github.com/luisfrein){target="_blank"} for the 2021 [#DuBoisChallenge](https://nightingaledvs.com/the-dubois-challenge/){target="_blank"}. Source: [Twitter](https://x.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
+:::
+
+:::
+::::
+
+<!-- <br> -->
+
+<!-- ::: {.footer} -->
+<!-- Source: [Twitter](https://x.com/ijeamaka_a/status/1361715338027560962){target="_blank"} -->
+<!-- ::: -->
 
 ::: {.notes}
-- WEB DuBois was an African American writer, scholar and activist; first African American to earn a PhD from Harvard University; helped found the National Association for the Advancement of Colored People (NAACP).
+- WEB DuBois was the first African American to earn a PhD from Harvard University
+- helped found the National Association for the Advancement of Colored People (NAACP)
 :::
 
 ---
 
-## {#history10 data-menu-title="History 10" visibility="uncounted"}
+## {#modern-day data-menu-title="Modern day"}
 
-[History of data visualization]{.slide-title}
+[(A little bit of the) History of data visualization]{.slide-title2}
 
 <hr>
 
-*Note: this is by no means a comprehensive history of the visual representation of information!*
+::: {.center-text}
+The emergency of programming languages and tools in recent years has made data visualization design easier than every before.
+:::
 
 ```{r}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/week1/history5.1.png")
+knitr::include_graphics("images/week1/modern-viz-tools.png")
 ```
-
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
-:::
-
-::: {.notes}
-- Tufte: statistician & professor emeritus at Yale; nobably famous for his books on information design; pioneer in the field of data viz; this book is a classic on statistical graphics
-:::
-
----
-
-## {#history11 data-menu-title="History 11" visibility="uncounted"}
-
-[History of data visualization]{.slide-title}
-
-<hr>
-
-*Note: this is by no means a comprehensive history of the visual representation of information!*
-
-```{r}
-#| eval: true
-#| echo: false
-#| out-width: "100%"
-#| fig-align: "center"
-knitr::include_graphics("images/week1/history5.2.png")
-```
-
-::: {.gray-text .body-text-s .center-text}
-Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"}, Wikipedia ([a](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}, [b](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}, [c](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}, [d](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}), [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}, [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}, [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"} & [Twitter](https://twitter.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
-:::
-
-::: {.notes}
-- R is a programming language for statistical computing and graphics
-- Tableau is a interactive data visualization software
-- D3.js is a JavaScript library for producing dynamic, interactive data visualizations in web browsers
-:::
 
 ---
 
@@ -414,7 +474,7 @@ Images from [BBC News](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){tar
 
 ```{r}
 countdown::countdown(
-  minutes = 4,
+  minutes = 3,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
