added some pre-class prep for week 5 optional class (edits to come after chatting with Alex)

--- a/course-materials/graphic-design.qmd
+++ b/course-materials/graphic-design.qmd
@@ -19,7 +19,19 @@ knitr::include_graphics(here::here("images", "graphic-design-logos.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lecture Prep {#pre-class-prep}
 
-*Coming soon!*
+### A. Download / install your *free* Affinity V2 Designer Trial
+
+The Affinity team was kind enough to provide us with 40(!) extended Affinity V2 app licenses, which are valid now until March 31, 2025. Follow [these installation instructions](https://docs.google.com/document/d/1atPlULR0zttKtwRcw2CcKUYfKH9BLMtC2nHArbSUE5c/edit?tab=t.0){target="_blank"} ahead of class. 
+
+Affinity is a subscription-free product -- if you are interested in purchasing it after your trial ends, visit [their website](https://affinity.serif.com/en-us/affinity-pricing/){target="_blank"}.
+
+### B. Create a *free* Canva account
+
+Visit [canva.com](https://www.canva.com/free/){target="_blank"} to get started.
+
+### C. Make sure you know how to access Google Docs
+
+Access all of your Google Apps (including Goolge Docs) using your **UCSBnetID@ucsb.edu** account.
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
