minor updates to lectures 1.1 & 1.2

--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -723,7 +723,7 @@ Any questions sent as DMs will be copied into `#eds-240-data-viz` and answered t
 
 <br>
 
-::: {.center-text}
+::: {.center-text .body-text-m}
 EDS 240: Data Visualization and Communication is about two related, but distinct things:
 :::
 
