--- a/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.2-intro-slides.qmd
@@ -160,12 +160,14 @@ knitr::include_graphics("images/week1/lascaux1.png")
 #| out-width: "100%"
 #| fig-align: "center"
 knitr::include_graphics("images/week1/lascaux2.png")
-```
+``` 
 :::
 ::::
 
 ::: {.footer}
 Sources: [BBC](http://news.bbc.co.uk/2/hi/science/nature/871930.stm){target="_blank"} & [Rock Art Blog](https://rockartblog.blogspot.com/2018/08/are-lascaux-cave-paintings-encoded.html){target="_blank"}
+
+[**16,500 years ago**]{.teal-text} | ~1150 BC | 1400 - 1532 AD | 1644 | 1786 | 1846 | 1856 | 1869 | 1900 | modern day
 :::
 
 ::: {.notes}
@@ -194,8 +196,12 @@ Oldest known geologic map, the Turin Papyrus Map, depicts a dry riverbed (Wadi H
 knitr::include_graphics("images/week1/turin-papyrus.png")
 ```
 
+<br>
+
 ::: {.footer}
 Source: [Wikipedia](https://en.wikipedia.org/wiki/Turin_Papyrus_Map){target="_blank"}
+
+16,500 years ago | [**~1150 BC**]{.teal-text} | 1400 - 1532 AD | 1644 | 1786 | 1846 | 1856 | 1869 | 1900 | modern day
 :::
 
 ::: {.notes}
@@ -224,8 +230,12 @@ Quipus (kee-poos) were recording devices used by the Inca Empire for data collec
 knitr::include_graphics("images/week1/quipu.png")
 ```
 
+<br>
+
 ::: {.footer}
 Source: [Smithsonian](https://www.si.edu/newsdesk/snapshot/quipu){target="_blank"}
+
+16,500 years ago | ~1150 BC | [**1400 - 1532 AD**]{.teal-text} | 1644 | 1786 | 1846 | 1856 | 1869 | 1900 | modern day
 :::
 
 ---
@@ -254,6 +264,8 @@ knitr::include_graphics("images/week1/toledo-rome.png")
 
 ::: {.footer}
 Source: [Wikipedia](https://en.wikipedia.org/wiki/Michael_van_Langren){target="_blank"}
+
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | [**1644**]{.teal-text} | 1786 | 1846 | 1856 | 1869 | 1900 | modern day
 :::
 
 ::: {.notes}
@@ -287,8 +299,12 @@ William Playfair, Scottish engineer and political economist, is credited as the 
 knitr::include_graphics("images/week1/playfair-bar.png")
 ```
 
+<br>
+
 ::: {.footer}
 Source: [Wikipedia](https://en.wikipedia.org/wiki/William_Playfair){target="_blank"}
+
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | 1644 | [**1786**]{.teal-text} | 1846 | 1856 | 1869 | 1900 | modern day
 :::
 
 ---
@@ -315,8 +331,12 @@ Emma Hart Willard, America's first professional female cartographer, created the
 knitr::include_graphics("images/week1/temple-of-time.png")
 ```
 
+<br>
+
 ::: {.footer}
 Source: [The Marginalian](https://www.themarginalian.org/2019/07/09/emma-willard/){target="_blank"}
+
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | 1644 | 1786} | [**1846**]{.teal-text} | 1856 | 1869 | 1900 | modern day
 :::
 
 ::: {.notes}
@@ -350,8 +370,12 @@ Florence Nightingale was an English wartime nurse who campaigned to improve sani
 knitr::include_graphics("images/week1/nightingale.png")
 ```
 
+<br>
+
 ::: {.footer}
 Source: [Scientific American](https://www.scientificamerican.com/article/how-florence-nightingale-changed-data-visualization-forever/){target="_blank"}
+
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | 1644 | 1786} | 1846 | [**1856**]{.teal-text} | 1869 | 1900 | modern day
 :::
 
 ::: {.notes}
@@ -383,8 +407,12 @@ Charles Minard, a French civil engineer, produced what is referred to as, "the g
 knitr::include_graphics("images/week1/minard.png")
 ```
 
+<br>
+
 ::: {.footer}
 Source: [Wikipedia](https://en.wikipedia.org/wiki/Charles_Joseph_Minard){target="_blank"}
+
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | 1644 | 1786} | 1846 | 1856 | [**1869**]{.teal-text} | 1900 | modern day
 :::
 
 ---
@@ -411,7 +439,7 @@ W.E.B. DuBois, was an African American writer, scholar and activist. He used pho
 knitr::include_graphics("images/week1/DuBois-anyene.png")
 ```
 
-::: {.center-text .body-text-s .gray-text}
+::: {.center-text .body-text-xs .gray-text}
 *Assessed value of household and kitchen furnitures owned by Georgia Negroes* [Recreation](https://github.com/Ijeamakaanyene/tidytuesday/blob/master/outputs/2021_06_webdubois.png){target="_blank"} by [Ijeamaka Anyene](https://ijeamaka-anyene.netlify.app/){target="_blank"} for the 2021 [#DuBoisChallenge](https://nightingaledvs.com/the-dubois-challenge/){target="_blank"}
 :::
 :::
@@ -425,12 +453,18 @@ knitr::include_graphics("images/week1/DuBois-anyene.png")
 knitr::include_graphics("images/week1/DuBois-freites.png")
 ```
 
-::: {.center-text .body-text-s .gray-text}
+::: {.center-text .body-text-xs .gray-text}
 *Proportion of Freemen and Slaves Among American Negroes.* [Recreation](https://github.com/luisfrein/R_Tidytuesday/tree/master/2021/W08_Dubois_Challenge){target="_blank"} by [Luis Freites](https://github.com/luisfrein){target="_blank"} for the 2021 [#DuBoisChallenge](https://nightingaledvs.com/the-dubois-challenge/){target="_blank"}. Source: [Twitter](https://x.com/ijeamaka_a/status/1361715338027560962){target="_blank"}
 :::
-
 :::
 ::::
+
+<br>
+<br>
+
+::: {.footer}
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | 1644 | 1786} | 1846 | 1856 | 1869 | [**1900**]{.teal-text} | modern day
+:::
 
 <!-- <br> -->
 
@@ -462,6 +496,10 @@ The emergency of programming languages and tools in recent years has made data v
 #| fig-align: "center"
 knitr::include_graphics("images/week1/modern-viz-tools.png")
 ```
+
+::: {.footer}
+16,500 years ago | ~1150 BC | 1400 - 1532 AD | 1644 | 1786} | 1846 | 1856 | 1869 | 1900 | [**modern day**]{.teal-text}
+:::
 
 ---
 
