added links to HW1/4, SR1, EOC1

--- a/course-materials/lecture-slides/lecture1.3-ggplot-review-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.3-ggplot-review-slides.qmd
@@ -38,8 +38,7 @@ editor_options:
 <br>
 
 ::: {.incremental}
-- consistent underlying "grammar of graphics" ([Wilkinson 2005](https://link.springer.com/book/10.1007/0-387-28695-0){target="_blank"})
-- super flexible, layered plot specification (see [Wickham 2008](http://vita.had.co.nz/papers/layered-grammar.pdf){target="_blank"})
+- super flexible, layered plot specification (see [Wickham 2008](http://vita.had.co.nz/papers/layered-grammar.pdf){target="_blank"}), based on an underlying "grammar of graphics" ([Wilkinson 2005](https://link.springer.com/book/10.1007/0-387-28695-0){target="_blank"}, originally published in 1999)
 - theme system for polishing plot appearance
 - lots of additional functionality thanks to extensions
 - active and helpful community 
@@ -70,29 +69,29 @@ adapted from [Cédric Scherer's](https://www.cedricscherer.com/){target="_blank"
 Grammar of graphics: provides a structure to combine graphical elements into figures that display data in a meaningful way.
 :::
 
----
+<!-- --- -->
 
-## {#grammar-of-graphics data-menu-title="Grammar of Graphics"} 
+<!-- ## {#grammar-of-graphics data-menu-title="Grammar of Graphics"}  -->
 
-[`{ggplot2}` is based on the Grammar of Graphics]{.slide-title2}
+<!-- [`{ggplot2}` is based on the Grammar of Graphics]{.slide-title2} -->
 
-<hr>
+<!-- <hr> -->
 
->*“A grammar of graphics is a tool that enables us to concisely describe the components of a graphic. Such a grammar allows us to move beyond named graphics (e.g. the “scatterplot”) and gain insight into the deep structure that underlies statistical graphics.” *
+<!-- >*“A grammar of graphics is a tool that enables us to concisely describe the components of a graphic. Such a grammar allows us to move beyond named graphics (e.g. the “scatterplot”) and gain insight into the deep structure that underlies statistical graphics.” * -->
 
-::: {.right-align-text .body-text-s}
--from Hadley Wickham’s [A layered grammar of graphics](https://doi.org/10.1198/jcgs.2009.07098){target="_blank"} in *Journal of Computational and Graphical Statistics*, vol. 19, no. 1 pp. 3-28, 2010.
-:::
+<!-- ::: {.right-align-text .body-text-s} -->
+<!-- -from Hadley Wickham’s [A layered grammar of graphics](https://doi.org/10.1198/jcgs.2009.07098){target="_blank"} in *Journal of Computational and Graphical Statistics*, vol. 19, no. 1 pp. 3-28, 2010. -->
+<!-- ::: -->
 
-<br>
+<!-- <br> -->
 
-. . .
+<!-- . . . -->
 
->*"In the grammar of a language, words have different parts of speech, which perform different roles in the sentence. Analagously, the grammar of graphics separates a graphic into different layers"*
+<!-- >*"In the grammar of a language, words have different parts of speech, which perform different roles in the sentence. Analagously, the grammar of graphics separates a graphic into different layers"* -->
 
-::: {.right-align-text .body-text-s}
--from Liz Sander’s post [Telling stories with data using the grammar of graphics](https://codewords.recurse.com/issues/six/telling-stories-with-data-using-the-grammar-of-graphics){target="_blank"}
-:::
+<!-- ::: {.right-align-text .body-text-s} -->
+<!-- -from Liz Sander’s post [Telling stories with data using the grammar of graphics](https://codewords.recurse.com/issues/six/telling-stories-with-data-using-the-grammar-of-graphics){target="_blank"} -->
+<!-- ::: -->
 
 ---
 
