--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -128,19 +128,18 @@ Add a new blank file to your class repo -- you'll complete your discussion exerc
 | [D1 slides: data wrangling](discussion/week1/week1-slides.qmd){target="_blank"} | [D1 exercise: wrangle fracking data](discussion/week1/week1-exercise.qmd) | [D1 solution](discussion/week1/week1-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
-
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
-| Assignment Type | Assignment Title                | Date Assigned  | Date Due                   |
-|-----------------|---------------------------------|----------------|----------------------------|
-| EOC             | End-of-class survey (week 1)    | Mon 01/06/2024 | Mon 01/06/2024, 11:55pm PT |
-| SR              | Pre-course reflection (SR #1)   | Mon 01/06/2024 | Sat 01/11/2024, 11:59pm PT |
-| HW              | Homework Assignment #1          | Tue 01/07/2025 | Sat 01/18/2024, 11:59pm PT |
-: {.hover .bordered tbl-colwidths="[20,30,20,30]"} 
+<!-- | Assignment Type | Assignment Title                | Date Assigned  | Date Due                   | -->
+<!-- |-----------------|---------------------------------|----------------|----------------------------| -->
+<!-- | EOC             | End-of-class survey (week 1)    | Mon 01/06/2024 | Mon 01/06/2024, 11:55pm PT | -->
+<!-- | SR              | Pre-course reflection (SR #1)   | Mon 01/06/2024 | Sat 01/11/2024, 11:59pm PT | -->
+<!-- | HW              | Homework Assignment #1          | Tue 01/07/2025 | Sat 01/18/2024, 11:59pm PT | -->
+<!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"}  -->
 
-<!-- | Assignment Type | Assignment Title                                                       |  Date Assigned | Date Due                   | -->
-<!-- |-----------------|------------------------------------------------------------------------|----------------|----------------------------| -->
-<!-- | EOC             | [End-of-class survey (week 1)](https://forms.gle/uToEd25hfVxajxNt8)    | Mon 01/06/2024 | Mon 01/06/2024, 11:55pm PT | -->
-<!-- | SR              | [Pre-course reflection (SR #1)](assignments/SR1-precourse.qmd)      | Mon 01/06/2024 | Sat 01/11/2024, 11:59pm PT | -->
-<!-- | HW              | [Homework Assignment #1](assignments/HW1.qmd)                       | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT | -->
-<!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"} -->
+| Assignment Type | Assignment Title                                                       |  Date Assigned | Date Due                   |
+|-----------------|------------------------------------------------------------------------|----------------|----------------------------|
+| EOC             | [End-of-class survey (week 1)](https://forms.gle/uToEd25hfVxajxNt8)    | Mon 01/06/2024 | Mon 01/06/2024, 11:55pm PT |
+| SR              | [Pre-course reflection (SR #1)](assignments/SR1-precourse.qmd)      | Mon 01/06/2024 | Sat 01/11/2024, 11:59pm PT |
+| HW              | [Homework Assignment #1](assignments/HW1.qmd)                       | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT |
+: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
