added allison back in for week 8; moved week8 materials to week 9

--- a/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
+++ b/course-materials/lecture-slides/lecture1.1-logistics-slides.qmd
@@ -295,8 +295,8 @@ Link is also bookmarked at the top of the **#eds-240-data-viz** Slack channel an
 | *5* | *2/07*  | *(optional) infographic design with Dr. Alex Phillips*               |
 | 6   | 2/10    | enhancing visualizations (part II)                                   |
 | 7   | 2/17    | [*no class* ]{.teal-text}                                            |
-| 8   | 2/24    | data storytelling, people as data                                    |
-| 9   | 3/03    | tbd                                                                  |
+| 8   | 2/24    | OJS with Dr. Allison Horst                                          |
+| 9   | 3/03    | data storytelling, people as data                                    |
 | 10  | 3/10    | grab bag & catch up                                                  |
 :::
 
