--- a/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
@@ -17,7 +17,7 @@ format:
 
 <hr class="hr-teal">
 
-[Week 8 | February 26^th^, 2025]{.custom-subtitle3}
+[Week 9 | March 3^rd^, 2025]{.custom-subtitle3}
 
 ---
 
