--- a/course-materials/week9.qmd
+++ b/course-materials/week9.qmd
@@ -1,47 +1,33 @@
 ---
-title: "TBD"
+title: "Data storytelling, People as data"
 subtitle: "Week 9"
 description: "Monday March 3^rd^, 2025"
 ---
-
-<!-- Original title: "Data visualization in JavaScript, with Dr. Allison Horst" -->
 
 ```{r}
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
 #| out-width: "85%" 
-#| fig-alt: "The Observable logo and brand name in black hovers above a series of yellow, red, and blue data points that appear to be timeseries data."
-#knitr::include_graphics(here::here("images", "observable.png"))
+#| fig-alt: "An extended version of the classic R4DS schematic from Grolemund & Wickham, with environmental data science, communities, and communication added."
+knitr::include_graphics(here::here("images", "horst-eco-r4ds.png"))
 ```
+
+:::{.gray-text .center-text}
+*Artwork by [Allison Horst](https://allisonhorst.com/){target="_blank"}*
+:::
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
 
-*Coming soon!*
-
-<!-- There's no *required* prep for this week's lecture. You will be able to make temporary edits to Allison's [Observable Notebook](https://observablehq.com/documentation/notebooks/) while in [Tinker mode](https://observablehq.com/documentation/collaboration/tinker-mode). If you'd like to save your changes, you may *optionally* [create a free starter account](https://observablehq.com/documentation/accounts-workspaces/accounts) (I chose to sign up using my GitHub credentials, but multiple options are provided), then [fork](https://observablehq.com/documentation/notebooks/forking) the [notebook](https://observablehq.com/@observablehq/eds-240-javascript-data-viz-follow).  -->
+*No pre-class prep necessary this week!*
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
-*Coming soon!*
-
-<!-- ### What is Observable JS? -->
-
-<!-- From the Quarto documentation: -->
-
-<!-- >"[Observable JS](https://observablehq.com/@observablehq/observable-javascript) is a set of enhancements to vanilla^1^ JavaScript created by [Mike Bostock](https://en.wikipedia.org/wiki/Mike_Bostock) (also the author of [D3](https://d3js.org/)). Observable JS is distinguished by its [reactive runtime](https://github.com/observablehq/runtime), which is especially well suited for interactive data exploration and analysis." -->
-
-<!-- [*^1^**vanilla** JavaScript is JavaScript code that is written without the aid of any external libraries or frameworks (comparable to using only base R without additional packages, e.g. like those in the `{tidyverse}`)*]{.body-text-s} -->
-
-<!-- ### Observable Notebook(s) -->
-
-<!-- - [EDS 240: Data visualization in JavaScript (Follow-along version)](https://observablehq.com/@observablehq/eds-240-javascript-data-viz-follow) (you'll want to Tinker with or fork this version if you want to follow along with Allison's instruction) -->
-<!-- - [EDS 240: Data visualization in JavaScript (Key)](https://observablehq.com/@observablehq/eds-240-javascript-data-viz) (this version includes *all* the code Allison will cover, in case you need to refer to in during class or return to it afterwards) -->
-
-<!-- ### Additional resources -->
-
-<!-- - [Add JavaScript to your dataviz toolkit with Observable Plot: Learner Version](https://observablehq.com/@observablehq/r-ladies-observable-plot-feb-2023-learner-version), by Allison Horst & Ananya Roy -- materials from R-Ladies Santa Barbara meetup (2023-05-24) -->
-<!-- - [Intro to Observable Plot: Exploring Taylor Swift Songs with Observable Plot](https://github.com/tashapiro/intro-observable?tab=readme-ov-file), by Tanya Shapiro -- materials from R-Ladies Philly workshop (2023-11-09) -->
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
+|------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
+| [Lecture 9.1: data storytelling](lecture-slides/lecture9.1-data-stories-slides.qmd){target="_blank"}  | *NA* | *NA* |
+| [Lecture 9.2: people as data](lecture-slides/lecture9.2-people-as-data-slides.qmd){target="_blank"} | *NA* | *NA* |
+: {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 Similar to last week's discussion, we'll be discussing progress on our data visualizations and providing constructive feedback to one another.  
