--- a/course-materials/lecture-slides/lecture9.1-data-stories-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.1-data-stories-slides.qmd
@@ -19,7 +19,7 @@ editor_options:
 
 <hr class="hr-teal">
 
-[Week 8 | February 26^th^, 2025]{.custom-subtitle3}
+[Week 9 | March 3rd^th^, 2025]{.custom-subtitle3}
 
 ---
 
